API clients multi-language support
* generated clients with swagger-codegen for python, R and typescript
(node)
* slightly modified schema to avoid quirks with swagger-codegen (e.g.
models named "class")
* updated makefile targets to generate the stuff using docker
