# pkg/restapi/models/class_name.go
@@ -1,11 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-// ClassName class name
-//
-// swagger:model className
-type ClassName interface{}
