# pkg/restapi/models/theme.go
@@ -80,12 +80,12 @@ func (m *Theme) SetID(val int64) {
 }
 
 // ShortCode gets the short code of this subtype
-func (m *Theme) ShortCode() ClassName {
+func (m *Theme) ShortCode() ClassNomenclatureName {
 	return "theme"
 }
 
 // SetShortCode sets the short code of this subtype
-func (m *Theme) SetShortCode(val ClassName) {
+func (m *Theme) SetShortCode(val ClassNomenclatureName) {
 }
 
 // Title gets the title of this subtype
@@ -127,7 +127,7 @@ func (m *Theme) UnmarshalJSON(raw []byte) error {
 
 		ID int64 `json:"id"`
 
-		ShortCode ClassName `json:"shortCode"`
+		ShortCode ClassNomenclatureName `json:"shortCode"`
 
 		Title Translation `json:"title"`
 	}
@@ -192,7 +192,7 @@ func (m Theme) MarshalJSON() ([]byte, error) {
 
 		ID int64 `json:"id"`
 
-		ShortCode ClassName `json:"shortCode"`
+		ShortCode ClassNomenclatureName `json:"shortCode"`
 
 		Title Translation `json:"title"`
 	}{
@@ -463,6 +463,20 @@ func (m *Theme) contextValidateDescriptionShort(ctx context.Context, formats str
 func (m *Theme) contextValidateID(ctx context.Context, formats strfmt.Registry) error {
 
 	if err := validate.ReadOnly(ctx, "id", "body", int64(m.ID())); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Theme) contextValidateShortCode(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := m.ShortCode().ContextValidate(ctx, formats); err != nil {
+		if ve, ok := err.(*errors.Validation); ok {
+			return ve.ValidateName("shortCode")
+		} else if ce, ok := err.(*errors.CompositeError); ok {
+			return ce.ValidateName("shortCode")
+		}
 		return err
 	}
 
